# qtmmlwidget-qt5

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.pri  qtmmlwidget.pro
.github/workflows/: cmake.yml
buildlib/: buildlib.pro
doc/html/: qtmmlwidget.qch
example/: example.pro  filebrowser.cpp  filebrowser.h  main.cpp  mainwindow.cpp  mainwindow.h
src/: qtmmlwidget.cpp  qtmmlwidget.h  qtmmlwidget.pri
